# scraping-voo

./: pyproject.toml
src/crawler/: abstract_crawler.py
src/tools/: mongo.py  redis.py
